Stop filter pane overlap
Filter pane on tiny screen overlaped pulldown instead of
sliding down below it.

--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -151,12 +151,12 @@ panes {
 }
 
 rightpane, leftpane {
-        width: 50%;
         display: block;
 }
 
 rightpane {
         float: right;
+        min-width: 25%;
 }
 
 leftpane {
@@ -165,7 +165,7 @@ leftpane {
 
 quicknum {
         display: block;
-        float: center;
+        float: right;
 }
 
 quicknum button {
